--- a/src/routes/Retribucion.css
+++ b/src/routes/Retribucion.css
@@ -1,50 +1,61 @@
-.retribucion{
-    width: auto;
-    height: 100vh;
-    background-color: black;
-    display: grid;
-    grid-template-rows: 10% 10% 75% 5%;
-    padding: 3rem 15rem;
-    grid-column: 1/4;
-
+.containerRetribucion {
+  width: 100vw;
+  height: 100vh;
+  background-color: black;
+  display: flex;
+  flex-direction: column;
+  justify-items: center;
+  align-items: center;
 }
 
-.titleRetribucion{
-    color: white;
-    text-align: left;
-    font-size: 3rem;
-    grid-row: 1/2;
+.retribucion {
+  display: flex;
+  flex-direction: column;
+  width: auto;
+  height: 100vh;
+  align-items: center;
+  justify-items: center;
+  align-content: space-evenly;
+  justify-content: center;
+}
+.titleRetribucion {
+  width: 53%;
+  height: auto;
+  color: white;
+  text-align: left;
+  font-size: 3rem;
 }
 
-.descripcion{
-    color: white;
-    text-align: left;
-    font-size: 1rem;
-    font-weight: 100;
-grid-row: 2/3;
+.descripcion {
+  width: 53%;
+  height: auto;
+  color: white;
+  text-align: left;
+  font-size: 1rem;
+  font-weight: 100;
+  grid-row: 2/3;
 }
 
-.containerlinks{
-    display: grid;
-    grid-row: 3/4;
-    grid-template-columns: 30% 70%;
-    justify-items: center;
-    align-items: center;
+.containerlinks {
+  justify-items: center;
+  align-items: center;
+}
+.link {
+  display: flex;
+}
+.page {
+  background-color: white;
+  padding: 1rem;
 }
 
-.page{
-    background-color: white;
-    padding: 1rem;
+.descripcionLink {
+  background-color: white;
+  padding: 1rem 2rem;
+  margin: 0.5rem;
+  font-size: 0.5rem;
 }
 
-.descripcionLink{
-    background-color: white;
-    padding: 1rem 2rem;
-    margin: 0.5rem;
-    font-size: 0.5rem;
-}
-
-.footer{
-    grid-column: 1/4;
-    grid-row: 4/5;
+.footer {
+  grid-column: 1/4;
+  grid-row: 4/5;
 }
