--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -24,13 +24,11 @@
 .toRetribucion {
   grid-column: 4/5;
   justify-content: left;
-
 }
 
 .toCreditos {
   grid-column: 5/6;
   justify-content: left;
-
 }
 
 .backHome,
@@ -59,14 +57,27 @@
 .btnMusic path {
   stroke: white;
 }
-
+input[type="range"]::-webkit-slider-thumb {
+  box-shadow: 1px 1px 1px #000000;
+  border: 1px solid #000000;
+  height: 30px;
+  width: 15px;
+  border-radius: 5px;
+  background: #ffffff;
+  cursor: pointer;
+  -webkit-appearance: none;
+  margin-top: -10.5px;
+}
+input[type="range"]::-webkit-slider-runnable-track {
+  background: red;
+  border-radius: 8px;
+}
 input[type="range"] {
   height: 1rem;
   color: white;
+
   /* background: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(154,154,154,1) 52%, rgba(2,0,36,1) 100%); */
 }
-
-
 
 @media screen and (max-width: 640px) {
   .footer {
