--- a/src/routes/Retribucion.css
+++ b/src/routes/Retribucion.css
@@ -37,22 +37,27 @@
 }
 
 .containerlinks {
-  justify-items: center;
-  align-items: center;
-}
-.link {
   display: flex;
+  justify-content: center;
 }
-.page {
+.nameLink {
   background-color: white;
-  padding: 1rem;
+  font-size: 1.5rem;
+  margin: 0.5rem;
+  padding: 2rem 3rem;
+}
+.linksName {
+  width: 20%;
 }
 
 .descripcionLink {
   background-color: white;
   padding: 1rem 2rem;
   margin: 0.5rem;
-  font-size: 0.5rem;
+  font-size: 0.8rem;
+}
+.containerDescription {
+  width: 30%;
 }
 
 .footer {
